java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/package-info.java
<error descr="'@SuppressWarnings' not applicable to package">@SuppressWarnings("all")</error> package annotations.invalidPackageAnnotationTarget;
